--- a/src/main/resources/templates/allRestaurants.html
+++ b/src/main/resources/templates/allRestaurants.html
@@ -11,6 +11,13 @@
       position: relative;
     }
 
+    .restaurant-item {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+      text-align: left;
+    }
+
     .pagination-controls {
       display: flex;
       justify-content: center;
