--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -2,6 +2,9 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy"content="upgrade-insecure-requests"/>
+  <link href="/css/styles.css" rel="stylesheet">
+  <script src="/js/script.js"></script>
   <title>로그인 성공</title>
   <style>
     .btn {
