--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="/css/styles.css" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+    <meta http-equiv="Content-Security-Policy"content="upgrade-insecure-requests"/>
+    <link href="/css/styles.css" rel="stylesheet">
     <script src="/js/script.js"></script>
     <style>
         .containers {
