--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,11 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy"content="upgrade-insecure-requests"/>
+  <link href="/css/styles.css" rel="stylesheet">
+  <script src="/js/script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
-  <!-- 필요한 CSS 파일 -->
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 <div id="login-form">
