--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -2,9 +2,10 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy"content="upgrade-insecure-requests"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>오점머</title>
-  <link href="/css/styles.css" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+  <link href="/css/styles.css" rel="stylesheet">
   <script src="/js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
