--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,7 +66,7 @@
         data: JSON.stringify({ id: id, password: password }),
         success: function () {
           // 로그인 성공 시 admin 페이지로 이동합니다.
-          window.location.href = `${host}/adminPage`;
+          window.location.href = `${host}/boss/adminPage`;
         },
         error: function () {
           alert("Login Fail");
