--- a/src/main/resources/templates/allRestaurants.html
+++ b/src/main/resources/templates/allRestaurants.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy"content="upgrade-insecure-requests"/>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
   <script src="/js/script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>음식점 전체 조회</title>
@@ -66,21 +66,20 @@
       <option value="양식">양식</option>
       <option value="기타">기타</option>
     </select>
-    <button onclick="updateCategory()">적용</button>
   </div>
 
   <!-- 키워드 검색 UI -->
   <div class="category-input">
     <label for="keywordInput">키워드 검색: </label>
     <input type="text" id="keywordInput" placeholder="음식점 이름 검색">
-    <button onclick="updateKeyword()">검색</button>
   </div>
 
   <div class="size-input">
     <label for="sizeInput">페이지 당 음식점 수: </label>
     <input type="number" id="sizeInput" min="1" value="5">
-    <button onclick="updateSize()">적용</button>
   </div>
+
+  <button onclick="searchRestaurants()">검색</button>
 
   <div class="total-count" id="totalCount">총 음식점 수: 0</div>
 
@@ -107,7 +106,6 @@
   function getRestaurants(page, size, category, keyword) {
     const url = `/v1/admin/restaurants?page=${page - 1}&size=${size}&category=${category}&keyword=${keyword}`;
 
-
     fetch(url, {
       method: 'GET',
       credentials: 'same-origin',
@@ -122,10 +120,10 @@
         const restaurantElement = document.createElement('div');
         restaurantElement.classList.add('restaurant-item');
         restaurantElement.innerHTML = `
-        <p><strong>이름:</strong> ${restaurant.name}</p>
-        <p><strong>카테고리:</strong> ${restaurant.category}</p>
-        <p><strong>주소:</strong> ${restaurant.address}</p>
-      `;
+            <p><strong>이름:</strong> ${restaurant.name}</p>
+            <p><strong>카테고리:</strong> ${restaurant.category}</p>
+            <p><strong>주소:</strong> ${restaurant.address}</p>
+        `;
         restaurantsList.appendChild(restaurantElement);
       });
 
@@ -137,10 +135,11 @@
       updatePaginationButtons();
 
       const totalCount = document.getElementById('totalCount');
-      totalCount.textContent = `총 음식점 수: ${data.data.totalElements}`;  // 총 요소 수 업데이트
+      totalCount.textContent = `총 음식점 수: ${data.data.totalElements}`;
     })
     .catch(error => console.error('Error fetching data:', error));
   }
+
 
   function prevPage() {
     if (currentPage > 1) {
@@ -154,28 +153,22 @@
     }
   }
 
-  function updateSize() {
+  function searchRestaurants() {
     const sizeInput = document.getElementById('sizeInput').value;
     pageSize = parseInt(sizeInput) || pageSize;
-    getRestaurants(currentPage, pageSize, selectedCategory, keyword);
-  }
 
-  function updateCategory() {
     const categorySelect = document.getElementById('categorySelect').value;
     selectedCategory = categorySelect;
-    getRestaurants(currentPage, pageSize, selectedCategory, keyword);
-  }
 
-  function updateKeyword() {
     const keywordInput = document.getElementById('keywordInput').value;
     keyword = keywordInput.trim();
+
     getRestaurants(currentPage, pageSize, selectedCategory, keyword);
   }
 
   document.addEventListener('DOMContentLoaded', () => {
     const host = window.location.origin;
 
-    // 세션을 확인하여 로그인 상태를 체크
     $.ajax({
       type: "GET",
       url: `${host}/v1/admin/get-session`,
@@ -188,7 +181,6 @@
         }
       },
       error: function () {
-        // 세션이 없으면 로그인 페이지로 리다이렉트합니다.
         window.location.href = `${host}/boss`;
       }
     });
