안내 문구 제공 (서울시 음식점만 제공한다는 안내문구)

--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -54,7 +54,7 @@
         </div>
         <div id="loading-container" class="hidden">
             <div class="spinner"></div>
-            <p class="loading-message">브라우저 상단에 엑세스 권한을 허용하셨다면, 지도가 곧 나타납니다.
+            <p class="loading-message">엑세스 권한을 허용하셨다면, 지도가 곧 나타납니다.
                 잠시만 기다려주세요.</p>
         </div>
         <div id="map-container" class="hidden flex-col items-center gap-8">
