--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -52,8 +52,8 @@
                 </button>
             </div>
             <p id="info-empty-restaurant" class="hidden mt-4 text-muted-foreground">
-                근처에 해당되는 음식점이 존재하지 않아요<br>
-                카테고리를 재선택하거나, 위치를 다른 곳으로 이동해주세요!
+                서울시 음식점만을 대상으로 하며,<br>
+                현재 위치를 기준으로 200M 이내의 음식점들을 추천해주는 서비스입니다.
             </p>
             <div id="searchResultArea">
                 <div id="searchResults" class="grid grid-cols-1 gap-8 sm:grid-cols-3" style="display:block"></div>
@@ -89,7 +89,7 @@
     }
 
     function hideInfoReRecommend() {
-        document.getElementById('info-empty-restaurant').style.display = 'none';
+        document.getElementById('recommend-section').style.display = 'none';
     }
 
     function showLoading() {
