--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -94,7 +94,7 @@
     </div>
 </div>
 <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=YOUR_KAKAO_APP_KEY"></script>
+        th:src="'//dapi.kakao.com/v2/maps/sdk.js?appkey=' + ${kakaoAppKey}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         let searchHistories = fetchSearchHistories();
