서비스 이름 수정

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>OJM</title>
+    <title>오늘 점심 뭐먹지?</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
