문구들 일부 수정

--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -89,11 +89,11 @@
                 <div id="map" class="w-full h-[300px] bg-gray-200"></div>
             </div>
             <p class="my-8 text-muted-foreground">
-                현재 위치한 곳이 맞는 지 확인해주세요
+                현재 위치한 곳이 맞는 지 확인해주세요.
             </p>
             <button onclick="window.location.href='/category'"
                     class="inline-flex h-10 items-center justify-center rounded-md bg-black px-8 text-sm font-medium text-white shadow transition-colors hover:bg-black/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50">
-                카테고리도 선택해주세요!
+                카테고리 선택하러 가기!
             </button>
         </div>
         <div id="previousSearchArea" class="hidden">
