--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -59,7 +59,7 @@
             <div class="mt-6">
                 <button th:onclick="|sendCategorySelection('@{/result}')|"
                         class="inline-flex h-10 items-center justify-center rounded-md bg-black px-8 text-sm font-medium text-white shadow transition-colors hover:bg-black/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50">
-                    결과 확인
+                    오늘의 점심 메뉴 추천받으러 가기!
                 </button>
             </div>
         </div>
