--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,8 @@
             당신의 식사를 정해드려요
         </h1>
         <p class="mt-4 text-muted-foreground text-base text-responsive">
-            주변에 어떤 음식점이 있는 지 궁금하신가요? 저희가 알려드릴게요!
+            주변에 어떤 음식점이 있는 지 궁금하신가요?  <br>
+            저희가 알려드릴게요!
         </p>
         <div class="mt-6">
             <a th:href="@{/location}"
