--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,6 +7,10 @@
   <script src="/js/script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Page</title>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
+  <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
 <div id="login-form">
