--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -6,6 +6,10 @@
   <link href="/css/styles.css" rel="stylesheet">
   <script src="/js/script.js"></script>
   <title>로그인 성공</title>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
+  <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+
   <style>
     .btn {
       display: block;
