--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -2,6 +2,10 @@
 <html lang="ko">
 <head>
     <title>오늘 점심 뭐먹지?</title>
+    <!-- FAVICON -->
+    <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
+    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
