--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <title>오늘 점심 뭐먹지?</title>
     <!-- FAVICON -->
     <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
-    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/icons/favicon-16x16.ico" type="image/x-icon">
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
